--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,11 +53,27 @@
     gtag('js', new Date());
     gtag('config', 'G-QC608XJKBS');
   </script>
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(registration => {
+            console.log('SW registered: ', registration);
+          })
+          .catch(registrationError => {
+            console.log('SW registration failed: ', registrationError);
+          });
+      });
+    }
+  </script>
 </body>
 
 </html>
