--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,14 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="apple-touch-icon" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="167x167" href="/favicon.png" />
+
+  <!-- iOS PWA Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Collabify" />
 
   <!-- Primary Meta Tags -->
   <title>TheCollabify - Connect Brands with Instagram Creators</title>
