--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="apple-touch-icon" href="/favicon.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/favicon.png" />
-  <link rel="apple-touch-icon" sizes="167x167" href="/favicon.png" />
+  <!-- Favicon with Cache Busting -->
+  <link rel="icon" type="image/png" href="/favicon.png?v=2" />
+  <link rel="apple-touch-icon" href="/favicon.png?v=2" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png?v=2" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/favicon.png?v=2" />
+  <link rel="apple-touch-icon" sizes="167x167" href="/favicon.png?v=2" />
+
+  <!-- PWA Icons with Cache Busting -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png?v=2" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png?v=2" />
+  <meta name="msapplication-TileImage" content="/favicon.png?v=2" />
 
   <!-- iOS PWA Meta Tags -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -33,7 +38,7 @@
   <meta property="og:title" content="TheCollabify - Connect Brands with Instagram Creators" />
   <meta property="og:description"
     content="India's #1 influencer marketing platform. AI-powered matching for perfect brand-creator collaborations." />
-  <meta property="og:image" content="/favicon.png" />
+  <meta property="og:image" content="/favicon.png?v=2" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -41,7 +46,7 @@
   <meta property="twitter:title" content="TheCollabify - Connect Brands with Instagram Creators" />
   <meta property="twitter:description"
     content="India's #1 influencer marketing platform. AI-powered matching for perfect brand-creator collaborations." />
-  <meta property="twitter:image" content="/favicon.png" />
+  <meta property="twitter:image" content="/favicon.png?v=2" />
 
   <!-- Theme Color -->
   <meta name="theme-color" content="#8b5cf6" />
@@ -61,14 +66,28 @@
     gtag('js', new Date());
     gtag('config', 'G-QC608XJKBS');
   </script>
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="/manifest.json" />
+  <!-- PWA Manifest - Disabled to prevent install prompts -->
+  <!-- <link rel="manifest" href="/manifest.json?v=2" /> -->
 
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+
+  <!-- Unregister any existing service workers to disable PWA -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.getRegistrations().then(function (registrations) {
+        for (let registration of registrations) {
+          registration.unregister();
+        }
+      });
+    }
+  </script>
+
+  <!-- Service Worker - Disabled to prevent PWA install prompts -->
+  <!--
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
@@ -82,6 +101,7 @@
       });
     }
   </script>
+  -->
 </body>
 
 </html>
