--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://thecollabify.vercel.app/" />
+  <meta property="og:url" content="https://thecollabify.tech/" />
   <meta property="og:title" content="TheCollabify - Connect Brands with Instagram Creators" />
   <meta property="og:description"
     content="India's #1 influencer marketing platform. AI-powered matching for perfect brand-creator collaborations." />
@@ -42,7 +42,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://thecollabify.vercel.app/" />
+  <meta property="twitter:url" content="https://thecollabify.tech/" />
   <meta property="twitter:title" content="TheCollabify - Connect Brands with Instagram Creators" />
   <meta property="twitter:description"
     content="India's #1 influencer marketing platform. AI-powered matching for perfect brand-creator collaborations." />
