chore: final market-ready audit and production optimization sweep

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
   <title>TheCollabify - Connect Brands with Instagram Creators</title>
   <meta name="title" content="TheCollabify - Connect Brands with Instagram Creators" />
   <meta name="description"
-    content="India's #1 influencer marketing platform. Connect Instagram creators with brands for paid promotions. AI-powered matching for perfect collaborations. Join 10K+ creators and 5K+ brands." />
+    content="India's #1 influencer marketing platform. Connect Instagram creators with brands for paid promotions. AI-powered matching for perfect collaborations." />
   <meta name="keywords"
     content="instagram influencer, creator marketing, brand promotions, influencer platform, paid promotions, instagram marketing, creator economy, brand collaborations, india" />
   <meta name="author" content="TheCollabify" />
