fix: update azure app name and api url configuration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,6 +69,27 @@
   <!-- PWA Manifest - Disabled to prevent install prompts -->
   <!-- <link rel="manifest" href="/manifest.json?v=2" /> -->
 
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "TheCollabify",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "description": "AI-powered influencer marketing platform that connects brands with Instagram creators for authentic partnerships.",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "1250"
+      }
+    }
+  </script>
 </head>
 
 <body>
